force-app/main/default/objects/Classification_Code__c/Classification_Code__c.object-meta.xml
<CustomObject>
    <description>Describes the relationship between a Classification Master and various objects</description>
    <label>Classification Code</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classification Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>