force-app/main/default/objects/Classification_Code__c/fields/I_RS_Classification_Master__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Classification Code</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 7) OR (3 AND 4 AND 7) OR (5 AND 6 AND 7)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Field of Research (FOR) codes</value>
        </filterItems>
        <filterItems>
            <field>Classification_Master__c.I_RS_Type__c</field>
            <operation>equals</operation>
            <value>Fields of Research (FOR)</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Socio-Economic Objective (SEO) codes</value>
        </filterItems>
        <filterItems>
            <field>Classification_Master__c.I_RS_Type__c</field>
            <operation>equals</operation>
            <value>Socio-economic Objective (SEO)</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Type of Activity (TOA) codes</value>
        </filterItems>
        <filterItems>
            <field>Classification_Master__c.I_RS_Type__c</field>
            <operation>equals</operation>
            <value>Type of Activity (TOA)</value>
        </filterItems>
        <filterItems>
            <field>Classification_Master__c.I_RS_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Classification_Master__c</referenceTo>
    <relationshipLabel>Classification Codes</relationshipLabel>
    <relationshipName>Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>