force-app/main/default/objects/Classification_Code__c/fields/I_RS_Disable_Grid_Validation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Disable_Grid_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In some cases, we want to turn off the typical validation for Classification Codes. e.g. Turn off &gt;0 rule when creating placeholder TOA records, which then gets overridden when they first save them.</description>
    <label>Disable Grid Validation</label>
    <type>Checkbox</type>
</CustomField>