force-app/main/default/objects/Classification_Code__c/fields/I_RS_Dummy_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Dummy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to kick off DLRS rollup summary fields.</description>
    <label>Dummy Flag</label>
    <type>Checkbox</type>
</CustomField>