force-app/main/default/objects/Classification_Code__c/fields/I_RS_Inactive_for_Non_Admins__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Inactive_for_Non_Admins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this record is hidden from end-user-facing UIs, but preserved in database for data tracking.</description>
    <inlineHelpText>When checked, this record is hidden from end-user-facing UIs, but preserved in database for data tracking.</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>