force-app/main/default/objects/Classification_Code__c/fields/I_RS_Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Opportunity</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Classification Codes</relationshipLabel>
    <relationshipName>Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>