force-app/main/default/objects/Classification_Code__c/recordTypes/FOR_Codes.recordType-meta.xml
<RecordType>
    <fullName>FOR_Codes</fullName>
    <active>true</active>
    <label>Field of Research (FOR) codes</label>
</RecordType>