force-app/main/default/objects/Classification_Code__c/recordTypes/SEO_Codes.recordType-meta.xml
<RecordType>
    <fullName>SEO_Codes</fullName>
    <active>true</active>
    <label>Socio-Economic Objective (SEO) codes</label>
</RecordType>