force-app/main/default/objects/Classification_Code__c/recordTypes/TOA_Codes.recordType-meta.xml
<RecordType>
    <fullName>TOA_Codes</fullName>
    <active>true</active>
    <label>Type of Activity (TOA) codes</label>
</RecordType>