force-app/main/default/objects/Classification_Code__c/validationRules/Minimum_Percentage_Amount_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Percentage_Amount_10</fullName>
    <active>true</active>
    <description>Enforces minimum Percentage of 10% in applicable scenarios</description>
    <errorConditionFormula>!I_RS_Disable_Grid_Validation__c 

&amp;&amp;

/*(!ISBLANK(I_RS_Project_Proposal__c) || !ISBLANK(I_RS_Researcher__c)) &amp;&amp; */

(RecordType.DeveloperName = &quot;FOR_Codes&quot; ||
RecordType.DeveloperName = &quot;SEO_Codes&quot;)

&amp;&amp;

I_RS_Percentage__c &lt; 0.1</errorConditionFormula>
    <errorDisplayField>I_RS_Percentage__c</errorDisplayField>
    <errorMessage>Minimum allowed Percentage is 10%</errorMessage>
</ValidationRule>