force-app/main/default/objects/Classification_Code__c/validationRules/Validate_Project_Proposal_Required_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Project_Proposal_Required_field</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISNEW(), 
TEXT(I_RS_Project_Proposal__r.I_RS_Project_Type__c ) = &apos; &apos;
||
ISBLANK(I_RS_Project_Proposal__r.I_RS_Project_Start_Date__c) 
||
ISBLANK(I_RS_Project_Proposal__r.I_RS_Project_End_Date__c)
||
TEXT(I_RS_Project_Proposal__r.I_RS_IP_Position__c) = &apos; &apos;
 )</errorConditionFormula>
    <errorMessage>Please fill in the required fields on the Project Proposal</errorMessage>
</ValidationRule>