force-app/main/default/objects/Classification_Code__c/validationRules/Validate_the_Count_of_SEO_CC.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_the_Count_of_SEO_CC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
I_RS_Project_Proposal__r.I_RS_CC_SEO_Count__c = 3,
TEXT(I_RS_Classification_Master__r.I_RS_Type__c) = &quot;Socio-economic Objective (SEO)&quot;,  I_RS_Classification_Master__r.I_RS_Active__c = TRUE
)</errorConditionFormula>
    <errorMessage>You can only add up to three (3) Classification Masters with a Type of &quot;Socio-economic Objective (SEO)&quot; within a Project Proposal.</errorMessage>
</ValidationRule>