force-app/main/default/objects/Classification_Code__c/listViews/All_Classification_Codes.listView-meta.xml
<ListView>
    <fullName>All_Classification_Codes</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Researcher__c</columns>
    <columns>I_RS_Classification_Master__c</columns>
    <columns>I_RS_Date_Added__c</columns>
    <columns>I_RS_Date_Removed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Classification Codes</label>
</ListView>